Closed
Bug 402342
Opened 18 years ago
Closed 18 years ago
SVG Filter feTurbulence: Minefield transposes type and stitchTiles attributes
Categories
(Core :: SVG, defect, P3)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: no-reply-address-of-florian, Assigned: longsonr)
References
()
Details
Attachments
(1 file)
|
1.04 KB,
patch
|
tor
:
review+
tor
:
superreview+
vlad
:
approvalM9-
vlad
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a9pre) Gecko/2007110212 Minefield/3.0a9pre
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a9pre) Gecko/2007110212 Minefield/3.0a9pre
Minefield renders the feTurbulence Filter always as "turbulence", even when the type is fractalNoise.
Reproducible: Always
Steps to Reproduce:
Display both files with Minefield:
http://www.w3.org/TR/SVG11/images/filters/feTurbulence.png
http://www.w3.org/TR/SVG11/images/filters/feTurbulence.svg
Component: General → SVG
Product: Firefox → Core
Version: unspecified → Trunk
| Assignee | ||
Comment 1•18 years ago
|
||
out of sync with sEnumInfo which is this...
nsSVGElement::EnumInfo nsSVGFETurbulenceElement::sEnumInfo[2] =
{
{ &nsGkAtoms::type,
sTypeMap,
nsIDOMSVGFETurbulenceElement::SVG_TURBULENCE_TYPE_TURBULENCE
},
{ &nsGkAtoms::stitchTiles,
sStitchTilesMap,
nsIDOMSVGFETurbulenceElement::SVG_STITCHTYPE_NOSTITCH
}
};
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #287223 -
Flags: superreview?(tor)
Attachment #287223 -
Flags: review?(tor)
Updated•18 years ago
|
QA Contact: general → general
| Assignee | ||
Updated•18 years ago
|
Flags: blocking1.9?
Attachment #287223 -
Flags: superreview?(tor)
Attachment #287223 -
Flags: superreview+
Attachment #287223 -
Flags: review?(tor)
Attachment #287223 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Attachment #287223 -
Flags: approvalM9?
Attachment #287223 -
Flags: approval1.9?
Attachment #287223 -
Flags: approvalM9?
Attachment #287223 -
Flags: approvalM9-
Attachment #287223 -
Flags: approval1.9?
Attachment #287223 -
Flags: approval1.9+
| Assignee | ||
Comment 2•18 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Summary: SVG Filter feTurbulence: Minefield ignores type="fractalNoise" → SVG Filter feTurbulence: Minefield transposes type and stitchTiles attributes
You need to log in
before you can comment on or make changes to this bug.
Description
•